syntax = "proto3";
package course;
option go_package = "course/course-srv/proto/course";
import "course/proto/basic/basic.proto";
import "course/course-srv/proto/dto/course.proto";
service CourseService {
  //Course
  rpc CourseList(CoursePageDto) returns (CoursePageDto);
  rpc SaveCourse(CourseDto) returns (CourseDto);
  rpc DeleteCourse(basic.String) returns (basic.String);
  rpc ListCourseCategory(basic.String) returns (CourseCategoryDtoList);
  rpc SortCourse(SortDto) returns (basic.String);
  rpc FindCourseContent(basic.String) returns (CourseContentDto);
  rpc SaveCourseContent(CourseContentDto) returns (basic.String);

  //Category
  rpc AllCategory(basic.String) returns (CategoryDtoList);
  rpc SaveCategory(CategoryDto) returns (CategoryDto);
  rpc DeleteCategory(basic.String) returns (basic.String);

}
